# formpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  form_read.py  img_processing.py  ismail_omr.py  main.py  pyproject.toml  questions.py  template_definition.py
.github/workflows/: test_deploy.yml
.ipynb_checkpoints/: form_read-checkpoint.py  img_processing-checkpoint.py  template_definition-checkpoint.py
docs/: rebuild.sh  requirements.txt
docs/source/: conf.py  formpy.rst  formpy.utils.rst  index.rst  modules.rst  starter.rst
formpy/: answer.py  form.py  question.py  questions.py  template.py
formpy/utils/: img_processing.py  template_definition.py
scanTrials/: output.csv
source/: modules.rst  tests.rst
templates/: OEEv3.4Template.txt  OEEv3.4Template_meta.json
tests/: __init__.py  conftest.py  paths.py  test_form.py  test_template.json  test_template.py  test_utils.py
tests/oee_forms/: test_template.json  test_template_simple.json
