[tool.poetry]
name = "formpy"
version = "0.1.0"
description = "optical mark recognition (omr) library"
authors = ["Ismail Mohammed <ismailmo4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
pytest = "^7.1.1"
black = "^22.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-fulltoc = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
