[tool.poetry]
name = "formpy-omr"
version = "0.1.3"
description = ""
authors = ["Ismail Mohammed <ismailmo4@gmail.com>"]
packages = [
    { include = "formpy" }
]

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.5.5"
numpy = "^1.22.3"
click = ">=8.0.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
pytest = "^7.1.2"
black = "^22.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-fulltoc = "^1.2.0"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
